--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "author": "David Nugent and Piyush Sasankan",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
